tests/typing/errors/mismatch_record_type/error.expected
File "tests/typing/errors/mismatch_record_type/error.ae", line 6, character 19-49:
6 |   forall x:t . x = { foo = true; foobar = false }
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error The field foobar does not belong to record type t
